# nixpkgs-voting

./: README.md  default.nix  flake.nix  pyproject.toml  treefmt.nix
nixpkgs_voting/: __init__.py  auth.py
nixpkgs_voting/polls/: __init__.py  base.py  yesno.py
